[gd_scene load_steps=57 format=2]

[ext_resource path="res://assets/player/idle/Idle (5).png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/walk/Walk (6).png" type="Texture" id=3]
[ext_resource path="res://assets/player/walk/Walk (7).png" type="Texture" id=4]
[ext_resource path="res://assets/player/walk/Walk (9).png" type="Texture" id=5]
[ext_resource path="res://assets/player/walk/Walk (8).png" type="Texture" id=6]
[ext_resource path="res://assets/player/walk/Walk (10).png" type="Texture" id=7]
[ext_resource path="res://assets/player/walk/Walk (2).png" type="Texture" id=8]
[ext_resource path="res://assets/player/walk/Walk (3).png" type="Texture" id=9]
[ext_resource path="res://assets/player/walk/Walk (4).png" type="Texture" id=10]
[ext_resource path="res://assets/player/walk/Walk (5).png" type="Texture" id=11]
[ext_resource path="res://assets/player/walk/Walk (1).png" type="Texture" id=12]
[ext_resource path="res://assets/player/idle/Idle (7).png" type="Texture" id=13]
[ext_resource path="res://assets/player/idle/Idle (3).png" type="Texture" id=14]
[ext_resource path="res://assets/player/idle/Idle (4).png" type="Texture" id=15]
[ext_resource path="res://assets/player/idle/Idle (8).png" type="Texture" id=16]
[ext_resource path="res://assets/player/idle/Idle (6).png" type="Texture" id=17]
[ext_resource path="res://assets/player/idle/Idle (9).png" type="Texture" id=18]
[ext_resource path="res://assets/player/idle/Idle (10).png" type="Texture" id=19]
[ext_resource path="res://assets/player/idle/Idle (1).png" type="Texture" id=20]
[ext_resource path="res://assets/player/idle/Idle (2).png" type="Texture" id=21]
[ext_resource path="res://assets/player/jump/Jump (10).png" type="Texture" id=22]
[ext_resource path="res://assets/player/jump/Jump (2).png" type="Texture" id=23]
[ext_resource path="res://assets/player/jump/Jump (5).png" type="Texture" id=24]
[ext_resource path="res://assets/player/jump/Jump (9).png" type="Texture" id=25]
[ext_resource path="res://assets/player/jump/Jump (1).png" type="Texture" id=26]
[ext_resource path="res://assets/player/jump/Jump (8).png" type="Texture" id=27]
[ext_resource path="res://assets/player/jump/Jump (3).png" type="Texture" id=28]
[ext_resource path="res://assets/player/jump/Jump (6).png" type="Texture" id=29]
[ext_resource path="res://assets/player/jump/Jump (7).png" type="Texture" id=30]
[ext_resource path="res://assets/player/jump/Jump (4).png" type="Texture" id=31]
[ext_resource path="res://assets/player/attack/Attack (7).png" type="Texture" id=32]
[ext_resource path="res://assets/player/attack/Attack (10).png" type="Texture" id=33]
[ext_resource path="res://assets/player/attack/Attack (8).png" type="Texture" id=34]
[ext_resource path="res://assets/player/attack/Attack (2).png" type="Texture" id=35]
[ext_resource path="res://assets/player/attack/Attack (3).png" type="Texture" id=36]
[ext_resource path="res://assets/player/attack/Attack (4).png" type="Texture" id=37]
[ext_resource path="res://assets/player/attack/Attack (5).png" type="Texture" id=38]
[ext_resource path="res://assets/player/attack/Attack (6).png" type="Texture" id=39]
[ext_resource path="res://assets/player/attack/Attack (1).png" type="Texture" id=40]
[ext_resource path="res://assets/player/attack/Attack (9).png" type="Texture" id=41]
[ext_resource path="res://assets/player/die/Dead (2).png" type="Texture" id=42]
[ext_resource path="res://assets/player/die/Dead (3).png" type="Texture" id=43]
[ext_resource path="res://assets/player/die/Dead (1).png" type="Texture" id=44]
[ext_resource path="res://assets/player/die/Dead (4).png" type="Texture" id=45]
[ext_resource path="res://assets/player/die/Dead (5).png" type="Texture" id=46]
[ext_resource path="res://assets/player/die/Dead (7).png" type="Texture" id=47]
[ext_resource path="res://assets/player/die/Dead (6).png" type="Texture" id=48]
[ext_resource path="res://assets/player/die/Dead (8).png" type="Texture" id=49]
[ext_resource path="res://assets/player/die/Dead (9).png" type="Texture" id=50]
[ext_resource path="res://assets/player/die/Dead (10).png" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 1 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 33 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 22 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ), ExtResource( 51 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.74765, 5.07467 )

[sub_resource type="CircleShape2D" id=3]
radius = 128.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 140.674, 15.1578 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 184 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
speed_scale = 2.0
playing = true

[node name="right_body_collision" type="CollisionShape2D" parent="."]
position = Vector2( -78.2863, 154.829 )
scale = Vector2( 13.8841, 16.5954 )
shape = SubResource( 2 )

[node name="left_body_collision" type="CollisionShape2D" parent="."]
position = Vector2( 33.8403, 144.15 )
scale = Vector2( 13.8841, 16.5954 )
shape = SubResource( 2 )
disabled = true

[node name="right_head_collision" type="CollisionShape2D" parent="."]
position = Vector2( -6.11928, -29.9681 )
shape = SubResource( 3 )

[node name="left_head_collision" type="CollisionShape2D" parent="."]
position = Vector2( -25.6247, -32.0522 )
shape = SubResource( 3 )

[node name="right_feet_collision" type="CollisionShape2D" parent="."]
position = Vector2( -82.4074, 289.268 )
shape = SubResource( 4 )

[node name="left_feet_collision" type="CollisionShape2D" parent="."]
position = Vector2( 47.072, 287.933 )
shape = SubResource( 4 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -430 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="PlayerAttackArea" type="Area2D" parent="."]
position = Vector2( -16, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttackArea"]
position = Vector2( 240, 152 )
shape = SubResource( 5 )
disabled = true

[node name="WallRayCast" type="Node2D" parent="."]

[node name="left_ray" type="Node2D" parent="WallRayCast"]

[node name="Left_WallRayCast2D" type="RayCast2D" parent="WallRayCast/left_ray"]
enabled = true
cast_to = Vector2( -210, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Left_WallRayCast2D2" type="RayCast2D" parent="WallRayCast/left_ray"]
position = Vector2( 0, 244.425 )
enabled = true
cast_to = Vector2( -210, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Left_WallRayCast2D3" type="RayCast2D" parent="WallRayCast/left_ray"]
position = Vector2( 0, 133.552 )
enabled = true
cast_to = Vector2( -210, 0 )
collision_mask = 8
collide_with_areas = true

[node name="right_ray" type="Node2D" parent="WallRayCast"]

[node name="Right_WallRayCast2D" type="RayCast2D" parent="WallRayCast/right_ray"]
enabled = true
cast_to = Vector2( 210, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Right_WallRayCast2D2" type="RayCast2D" parent="WallRayCast/right_ray"]
position = Vector2( 0, 134.811 )
enabled = true
cast_to = Vector2( 210, 0 )
collision_mask = 8
collide_with_areas = true

[node name="Right_WallRayCast2D3" type="RayCast2D" parent="WallRayCast/right_ray"]
position = Vector2( 0, 241.905 )
enabled = true
cast_to = Vector2( 210, 0 )
collision_mask = 8
collide_with_areas = true
[connection signal="body_entered" from="PlayerAttackArea" to="." method="_on_PlayerAttackArea_body_entered"]
